Update Analytic Hierarchy Process Simulation.htm

--- a/Analytic Hierarchy Process Simulation.htm
+++ b/Analytic Hierarchy Process Simulation.htm
@@ -1189,6 +1189,10 @@
         if (num == 5) return 1.12;
         if (num == 6) return 1.24;
         if (num == 7) return 1.32;
+        if (num == 8) return 1.41;
+        if (num == 9) return 1.45;
+        if (num == 10) return 1.49;
+        return 0;
       }
 
       function refresh(undo = false) {
